// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET_CAT 1`] = `
Object {
  "imageSrc": "https://placekitten.com/200/300",
}
`;

exports[`cat reducer without state uses default 1`] = `
Object {
  "imageSrc": "",
}
`;
